--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
           Convert JSON to CSS variables
         </h1>
         <!-- .ns-layout__header__title -->
+
+        <a href="https://github.com/nathansmith/json-to-css-var">GitHub</a>
       </header>
       <!-- .ns-layout__header -->
 
