Split "variables.css" into its own file, since that's what is being advocated.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <title>JSON to CSS var</title>
 
+    <link rel="stylesheet" href="./assets/css/variables.css" />
     <link rel="stylesheet" href="./assets/css/index.css" />
   </head>
   <body>
