Extract jsonToCssVar into its own class/file.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </div>
     <!-- .ns-layout -->
 
+    <script src="./assets/js/jsonToCssVar.js"></script>
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
